# AI-Document-Processing-Pipeline

./: Makefile  README.md  pyproject.toml  run_tests.py
src/unstructured-data-pipeline/: config.py  main.py
src/unstructured-data-pipeline/application/pipelines/: llm_pipeline.py
src/unstructured-data-pipeline/domain/prompts/: human_instructions.py  llm_instructions.py
src/unstructured-data-pipeline/domain/schema/: clinical.py  invoice.py  llm_output.py
src/unstructured-data-pipeline/domain/tools/: file_creation.py  sql_execution.py
src/unstructured-data-pipeline/domain/validators/: file_naming.py
src/unstructured-data-pipeline/infrastructure/CLI/: main.py
src/unstructured-data-pipeline/infrastructure/llm_providers/: gemini_provider.py
src/unstructured-data-pipeline/saved_files/: Data.db
tests/: test_app.py
tests/test_files/: invoice_clean.txt  invoice_email.txt  invoice_messy.txt  referral_messy.txt
